# neon_swarm

./: .gitignore  LICENSE  README.md  agents.py  main.py  pyproject.toml  requirements.txt  tools.py
.github/workflows/: ci.yml
src/neon_swarm/: __init__.py  agents.py  main.py  tools.py
tests/: test_neon_swarm.py
