[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neon_swarm"
version = "0.1.0"
authors = [
  { name="Raouf Chebri", email="raouf.chebri@gmail.com" },
]
description = "Neon OpenAI Swarm Agent for interacting with Postgres and Neon databases"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "swarm",
    "requests",
    "psycopg2-binary",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/raoufchebri/neon_swarm"
"Bug Tracker" = "https://github.com/raoufchebri/neon_swarm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neon_swarm"]
